# mcp-setup2

./: .gitignore  README.md
client/: client.py  pyproject.toml
server/: pyproject.toml  server.py
server/helper_functions/: iam.py  powervs.py  schematics.py
wx_client/: pyproject.toml  wx_client.py  wx_client2.py
